--- a/starBuzz/index.html
+++ b/starBuzz/index.html
@@ -1,17 +1,25 @@
-Starbuzz Coffee Beverages
+<html>
+  <head>
+    <h1>Starbuzz Coffee Beverages</h1>
+  </head>
 
-House Blend, $1.49
+  <body>
+    
+    <h2>House Blend, $1.49</h2>
 
-A smooth, mild blend of coffee from Mexico, Bolivia and Guatemala.
+    <p>A smooth, mild blend of coffee from Mexico, Bolivia and Guatemala.</p>
 
-Mocha Cafe Latte, $2.35
+    <h2>Mocha Cafe Latte, $2.35</h2>
 
-Espresso, steamed milk and chocolate syrup.
+    <p>Espresso, steamed milk and chocolate syrup.</p>
 
-Cappuccino, $1.89
+    <h2>Cappuccino, $1.89</h2>
 
-A mixture of espresso, steamed milk and foam.
+    <p>A mixture of espresso, steamed milk and foam.</p>
 
-Chai Tea, $1.85
+    <h2>Chai Tea, $1.85</h2>
 
-A spicy drink made with tea, spices, milk and honey.
+    <p>A spicy drink made with tea, spices, milk and honey.</p>
+
+  </body>
+</html>
