--- a/head_first_lounge/index.html
+++ b/head_first_lounge/index.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <title>Welcome to the New and  Improve Head First Lounge</title>
-    <img src="drinks.git">
   </head>
 
   <body>
     <h1>Welcome to the New and Improve Head First Lounge</h1>
-    <p>Join us any evening fix refreshing elixirs, conversation and maybe a game or two of
+    <img src="image/drinks.gif">
+    <p>Join us any evening for refreshing <a href="elixir.html">elixirs</a>, conversation and maybe a game or two of
       <em>Danse Dance Revolution</em>.
       Wireless access is always provided; BOYWS(Bring yours own web server).</p>
 
     <h2>Direction</h2>
-    <p>You'll find us right in center of downtown Webville. If you need help finding us, check out our detailed directions. Come join us!</p>
+    <p>You'll find us right in center of downtown Webville. If you need help finding us, check out our <a href="directions.html">detailed directions</a>. Come join us!</p>
   </body>
 </html>
